# mlguard-lint

./: .gitignore  LICENSE  README.md  pyproject.toml
mlguard/: cli.py  rules.py
mlguard_lint/: cli.py  scanner.py
tests/: test_rules.py
tests/notebooks/: 01_scaler_before_split.ipynb  02_imputer_before_cv.ipynb  03_pca_before_split.ipynb  04_selectkbest_before_split.ipynb  05_text_vectorizer_before_cv.ipynb  06_evaluate_on_train.ipynb  07_smote_before_split.ipynb  08_sklearn_pipeline_smote.ipynb  09_group_id_random_split.ipynb  10_kfold_group_risk.ipynb  11_grid_best_score.ipynb  12_labelencoder_feature.ipynb  13_test_reuse.ipynb  14_target_mean_encoding.ipynb  15_clean_pipeline.ipynb  16_imputer_assigned_instance.ipynb  17_no_test_set.ipynb  18_resample_test_set.ipynb  19_timeseries_random_cv.ipynb  20_target_in_features.ipynb  21_target_encoder_fit_transform.ipynb  22_ordinal_encoder_feature.ipynb  23_clean_timeseries_pipeline.ipynb  24_scale_before_cv.ipynb  25_resample_before_split.ipynb  26_split_without_stratify.ipynb  27_missing_random_state.ipynb  28_group_leakage_split.ipynb  29_gridsearch_best_score.ipynb  30_test_set_reused.ipynb  31_refit_on_test.ipynb  32_auc_on_hard_preds.ipynb  33_global_stat_feature.ipynb  34_micro_average.ipynb  35_id_column_feature.ipynb  36_upsample_before_split.ipynb
