[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mlguard"
version = "0.1.1"
description = "Static CLI linter for silent methodological errors in scikit-learn workflows"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
mlguard = "mlguard.cli:main"

[tool.setuptools]
packages = ["mlguard"]
